# from-root

./: .gitignore  README.md  clear_setup_cache.sh  pypi.sh  pyproject.toml  setup.py
examples/: basic.py
from_root/: __init__.py  base.py  config.py  from_here.py  from_root.py  from_root_.py  get_project_dir.py  get_project_root.py  here.py  root.py
from_root/utils/: __init__.py  all_dirs_exists.py  get_project_root.py  mkdirs_if_needed.py
tests/: conftest.py  test_from_root.py  test_get_project_root.py  test_handle_site_packages.py  test_mkdirs.py
