[tool.poetry]
name = "from-root"
version = "0.1.0"
description = "Forget about working directory errors"
authors = ["Eduard Kononov <aduard.kononov@gmail.com>"]
readme = "README.md"
packages = [{include = "from_root"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry=1.3.1"]
build-backend = "poetry.core.masonry.api"
