[tool.poetry]
name = "from-root"
version = "1.2.0"
description = "Forget about working directory errors"
authors = ["Eduard Kononov <aduard.kononov@gmail.com>"]
readme = "README.md"
packages = [{ include = "from_root" }]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]

[tool.poetry.urls]
"GitHub" = 'https://github.com/EduardKononov/from-root'

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry=1.3.1"]
build-backend = "poetry.core.masonry.api"
